# Inventory-Management-System

./: .gitignore  CMakeLists.txt  README.md
.qtcreator/: CMakeLists.txt.user.ac581e9
code/Forms/: dialog.ui  logindialog.ui
code/HeaderFiles/: admin.h  chemical.h  dialog.h  fileManager.h  food.h  inventory.h  logindialog.h  nonperishable.h  perishable.h  product.h  productFactory.h  productType.h  rawmaterial.h  supplier.h  systemController.h  user.h  userManager.h
code/SourceFiles/: admin.cpp  chemical.cpp  dialog.cpp  fileManager.cpp  food.cpp  inventory.cpp  logindialog.cpp  main.cpp  nonperishable.cpp  perishable.cpp  productFactory.cpp  rawmaterial.cpp  supplier.cpp  systemController.cpp  user.cpp  userManager.cpp
tests/: test_food.cpp  test_inventory.cpp
